Add access control for /dashboard route

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,7 +29,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/dashboard, roles: ROLE_USER } # 👈 Added this line to protect /dashboard
+        - { path: ^/dashboard, roles: ROLE_USER } 
         - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
